// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a list table with fixed widths renders correctly 1`] = `
<table
  class="docutils guide-tablenate-odd colwidths-given "
  style="width:auto"
>
  <colgroup>
    <col
      width="20%"
    />
    <col
      width="80%"
    />
  </colgroup>
  <thead
    valign="bottom"
  />
  <tbody
    valign="top"
  >
    <tr
      class="row-odd"
    >
      <td
        class=""
      >
        notebook
      </td>
      <td
        class=""
      >
        50
      </td>
      <td
        class=""
      >
        8.5x11,in
      </td>
      <td
        class=""
      >
        A
      </td>
      <td
        class=""
      >
        college-ruled,perforated
      </td>
      <td
        class=""
      >
        8
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`when rendering a list-table directive renders correctly 1`] = `
<table
  class="docutils guide-tablenate colwidths-auto "
  style="width:auto"
>
  <thead
    valign="bottom"
  >
    <tr
      class="row-odd"
    >
      <th
        class="head stub"
      >
        name
      </th>
      <th
        class="head false"
      >
        quantity
      </th>
      <th
        class="head false"
      >
        size
      </th>
      <th
        class="head false"
      >
        status
      </th>
      <th
        class="head false"
      >
        tags
      </th>
      <th
        class="head false"
      >
        rating
      </th>
    </tr>
  </thead>
  <tbody
    valign="top"
  >
    <tr
      class="row-even"
    >
      <th
        class="stub"
      >
        journal
      </th>
      <td
        class=""
      >
        25
      </td>
      <td
        class=""
      >
        14x21,cm
      </td>
      <td
        class=""
      >
        A
      </td>
      <td
        class=""
      >
        brown, lined
      </td>
      <td
        class=""
      >
        9
      </td>
    </tr>
    <tr
      class="row-odd"
    >
      <th
        class="stub"
      >
        notebook
      </th>
      <td
        class=""
      >
        50
      </td>
      <td
        class=""
      >
        8.5x11,in
      </td>
      <td
        class=""
      >
        A
      </td>
      <td
        class=""
      >
        college-ruled,perforated
      </td>
      <td
        class=""
      >
        8
      </td>
    </tr>
    <tr
      class="row-even"
    >
      <th
        class="stub"
      >
        paper
      </th>
      <td
        class=""
      >
        100
      </td>
      <td
        class=""
      >
        8.5x11,in
      </td>
      <td
        class=""
      >
        D
      </td>
      <td
        class=""
      >
        watercolor
      </td>
      <td
        class=""
      >
        10
      </td>
    </tr>
    <tr
      class="row-odd"
    >
      <th
        class="stub"
      >
        planner
      </th>
      <td
        class=""
      >
        75
      </td>
      <td
        class=""
      >
        22.85x30,cm
      </td>
      <td
        class=""
      >
        D
      </td>
      <td
        class=""
      >
        2019
      </td>
      <td
        class=""
      >
        10
      </td>
    </tr>
    <tr
      class="row-even"
    >
      <th
        class="stub"
      >
        postcard
      </th>
      <td
        class=""
      >
        45
      </td>
      <td
        class=""
      >
        10x,cm
      </td>
      <td
        class=""
      >
        D
      </td>
      <td
        class=""
      >
        double-sided,white
      </td>
      <td
        class=""
      >
        2
      </td>
    </tr>
  </tbody>
</table>
`;
